# QML-1.4.0

./: .gitignore  README.md
QML/1.4.0/: AUTHORS  LICENSE  NOTICE
QML/1.4.0/arm32/lp64/examples/: CMakeLists.txt  ConvMMExample.cpp  MinimalExample.cpp  QMLInfoExample.cpp
QML/1.4.0/arm32/lp64/include/: netlib_lapack.h  qml_blas3.h
QML/1.4.0/arm64/ilp64/examples/: BLASSolveExample.cpp  BigBLASExample.cpp  CBLASExample.cpp  CMakeLists.txt  ConvMMExample.cpp  LeastSquaresExample.cpp  MinimalExample.cpp  QMLInfoExample.cpp  SVDExample.cpp  android_build.sh  native_debug.cpp  native_debug.h
QML/1.4.0/arm64/ilp64/examples/jni/: Android.mk  Application.mk
QML/1.4.0/arm64/ilp64/include/: qml_blas1.h  qml_extensions.h  qml_types.h
QML/1.4.0/arm64/lp64/examples/: BLASSolveExample.cpp  BigBLASExample.cpp  CBLASExample.cpp  LeastSquaresExample.cpp  SVDExample.cpp
QML/1.4.0/arm64/lp64/include/: qlapack.h  qml_blas2.h  qml_extensions_common.h
QML/1.4.0/docs/: index.html
QML/1.4.0/docs/html/: .buildinfo  blas.html  blas_index.html  example_programs.html  genindex.html  index.html  introduction.html  introduction_lapack.html  lapack.html  objects.inv  qml_types.html  search.html  searchindex.js  using_qml.html
QML/1.4.0/docs/html/BLAS/: blas1.html  blas2.html  blas3.html
QML/1.4.0/docs/html/Extensions/: conv_mm.html  extensions.html  i32i8conv.html
QML/1.4.0/docs/html/LAPACK/: bdsqr.html  cladiv.html  gebak.html  gebal.html  gees.html  geev.html  gehrd.html  gels.html  gelsd.html  geqr2.html  geqrf.html  gesdd.html  gesv.html  gesvd.html  gesvx.html  getf2.html  getrf.html  getri.html  getrs.html  gges.html  ggev.html  heev.html  heevd.html  hetrd.html  hseqr.html  ilaxlc.html  ilaxlr.html  lacgv.html  lacpy.html  ladiv.html  lange.html  lapack.html  lapy2.html  lapy3.html  larf.html  larfb.html  larfg.html  (+31 more)
(+202 files in other folders)
